--- a/CSS test web/index(swich).html
+++ b/CSS test web/index(swich).html
@@ -13,6 +13,7 @@
 	<script type="text/javascript" src="./JS/bak.js"></script>
 </head>
 <body>
+	<audio src="./music/audio.mp3" id="AudioPlay" loop="true"></audio>
 	<div class="backGrondBtn">
 		<!-- 배경 스위치 on/off -->
 		<div class="wrapper wra1">
