--- a/CSS test web/index(swich).html
+++ b/CSS test web/index(swich).html
@@ -26,7 +26,8 @@
 		<div id="removbk">
 			<!-- 다크 모드 -->
 			<div class="wrapper wra2">
-				<span class="material-symbols-outlined SwICH" style="font-size: 35px;">dark_mode</span>
+				<span class="material-symbols-outlined darkMode" style="font-size: 35px;">dark_mode</span>
+				<span class="material-symbols-outlined lightMode" style="font-size: 35px; display: none;">light_mode</span>
 		  		<input type="checkbox" id="switch" onclick="NightDay();">
 		  		<label for="switch" class="switch_label">
 		    		<span class="onf_btn"></span>
@@ -34,7 +35,7 @@
 			</div>
 			<!-- 레인보우 -->
 			<div class="wrapper wra3">
-				<span class="material-symbols-outlined SwICH" style="font-size: 35px;">looks</span>
+				<span class="material-symbols-outlined" style="font-size: 35px;">looks</span>
 		  		<input type="checkbox" id="switch2" onclick="RainBak();">
 		  		<label for="switch2" class="switch_label2">
 		    		<span class="onf_btn2"></span>
