--- a/CSS test web/index(swich).html
+++ b/CSS test web/index(swich).html
@@ -15,33 +15,35 @@
 <body>
 	<audio src="./music/audio.mp3" id="AudioPlay" loop="true"></audio>
 	<div class="backGrondBtn">
-		<!-- 배경 스위치 on/off -->
-		<div class="wrapper wra1">
-	  		<span class="material-symbols-outlined" style="font-size: 35px;">tune</span>
-	  		<input type="checkbox" id="switchAll" onclick="removeBack();" checked>
-	  		<label for="switchAll" class="switch_labelAll">
-	    		<span class="onf_btnAll"></span>
-	 		</label>
-		</div>
-		<div id="removbk">
-			<!-- 다크 모드 -->
-			<div class="wrapper wra2">
-				<span class="material-symbols-outlined darkMode" style="font-size: 35px;">dark_mode</span>
-				<span class="material-symbols-outlined lightMode" style="font-size: 35px; display: none;">light_mode</span>
-		  		<input type="checkbox" id="switch" onclick="NightDay();">
-		  		<label for="switch" class="switch_label">
-		    		<span class="onf_btn"></span>
+		<div class="esy">
+			<!-- 배경 스위치 on/off -->
+			<div class="wrapper wra1">
+		  		<span class="material-symbols-outlined tun" style="font-size: 35px;">tune</span>
+		  		<input type="checkbox" id="switchAll" onclick="removeBack();" checked>
+		  		<label for="switchAll" class="switch_labelAll">
+		    		<span class="onf_btnAll"></span>
 		 		</label>
 			</div>
-			<!-- 레인보우 -->
-			<div class="wrapper wra3">
-				<span class="material-symbols-outlined" style="font-size: 35px;">looks</span>
-		  		<input type="checkbox" id="switch2" onclick="RainBak();">
-		  		<label for="switch2" class="switch_label2">
-		    		<span class="onf_btn2"></span>
-		 		</label>
+			<div id="removbk">
+				<!-- 다크 모드 -->
+				<div class="wrapper wra2">
+					<span class="material-symbols-outlined darkMode" style="font-size: 35px;">dark_mode</span>
+					<span class="material-symbols-outlined lightMode" style="font-size: 35px; display: none;">light_mode</span>
+			  		<input type="checkbox" id="switch" onclick="NightDay();">
+			  		<label for="switch" class="switch_label">
+			    		<span class="onf_btn"></span>
+			 		</label>
+				</div>
+				<!-- 레인보우 -->
+				<div class="wrapper wra3">
+					<span class="material-symbols-outlined rianbowIkon" style="font-size: 35px;">looks</span>
+			  		<input type="checkbox" id="switch2" onclick="RainBak();">
+			  		<label for="switch2" class="switch_label2">
+			    		<span class="onf_btn2"></span>
+			 		</label>
+			 	</div>
 		 	</div>
-	 	</div>
+		</div>
 	</div>
 </body>
 </html>
